# formatbot2

./: Cargo.toml  build-all-docker.sh  build-formatters.sh  compose.yml
docker/: formatter.Dockerfile
format-core/: Cargo.toml
format-core/src/: lib.rs
format-discord-bot/: Cargo.toml
format-discord-bot/src/: commands.rs  main.rs
format-formatter/: Cargo.toml
format-formatter/src/: format.rs  main.rs
formatbot/: Cargo.toml
formatbot/src/: commands.rs
formatcore/: Cargo.toml
formatter/: Cargo.toml
formatter/src/: format.rs  main.rs
