[package]
name = "format-formatter"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
tokio = { version = "1.44.2", features = ["full"] }
format-core = { path = "../format-core" }
tempfile = "3.19.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tower-http = { version = "0.6.2", features = ["trace"] }

[features]
default = []
rust = []
typescript = []
javascript = []
php = []

